# memds

./: Cargo.toml  LICENSE  README.md  TODO.md  compare.md  notes.md
.github/workflows/: rust.yml
memds-cli/: Cargo.toml  TODO.md
memds-cli/src/: cmd.rs  keys.rs  list.rs  main.rs  server.rs  set.rs  string.rs  util.rs
memds-proto/: Cargo.toml  build.rs
memds-proto/src/: .gitignore  codec.rs  error.rs  lib.rs  memds-api.proto  util.rs
memds-server/: .gitignore  Cargo.toml  example-memds.conf
memds-server/src/: config.rs  keys.rs  list.rs  main.rs  rpcservice.rs  server.rs  set.rs  string.rs
memds-server/src/op/: string.rs
