[package]
name = "memds-cli"
version = "0.2.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memds-proto = { path = "../memds-proto" }
clap = "2.33"
futures = "0.1"
grpcio = { version = "0.4", features = ["openssl"] }
protobuf = "~2"
log = "0.4"
