[package]
name = "memds-proto"
version = "0.1.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
bytes = "0.5"

[build-dependencies]
protoc-rust = "2.0"

