[package]
name = "memds-proto"
version = "0.1.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
grpcio = "0.4"
protobuf = "~2"

[build-dependencies]
protoc-grpcio = "1.0.2"

