[package]
name = "memds-server"
version = "0.1.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memds-proto = { path = "../memds-proto" }
futures = "0.1"
grpcio = "0.4"
protobuf = "~2"
log = "0.4"
