[package]
name = "memds-server"
version = "0.2.0"
authors = ["Jeff Garzik <jeff@bloq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memds-proto = { path = "../memds-proto" }
futures = "0.1"
grpcio = { version = "0.4", features = ["openssl"] }
protobuf = "~2"
log = "0.4"
clap = "3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
bytes = "0.5"
nix = "0.17"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
